2016-04-09 0.7.1 beta
Add the fuse mechanism to avoid black midi blocking the
main thread.

2016-04-08 0.7.1 beta
Add MIDI activity indicator.
Substract time taken by sending midi data from sleep time.
Fix no soundfont loaded after rendering a file.
Modify default settings for Windows, solving the timing
problem for me.

2016-04-07 0.7.1 beta
MIDI mapper: first steps.

2016-04-06 0.7.0 beta
Further works on project integration.
Perhaps we need a version bump?

2016-04-06 0.7.0 beta
Merge qmidiplayerlite. Hope this won't break the repo.

2016-04-05 0.7.0 beta
Raise player thread priority in Windows.
I've been so tired with the timing bug...
Remove several printf's.

2016-03-23 0.7.0 beta
Fix drag&drop behavior in Windows.
Use winmm functions to ensure timing precision.

2016-03-19 0.7.0 beta
Minor changes on w32usleep...
Sync with the Windows build.

2016-02-28 0.7.0 beta
RPN pitch bend range handling.
Added an option to disable waiting for remaining voices before stopping.
Documentation...

2016-02-28 0.7.0 beta
Significant sleep precision improvments for Windows.
Also save master volume in configuration file.

2016-01-31 0.7.0 beta
Modify default settings in for Win32.
Initial MIDI mapper stub.

2016-01-30 0.7.0 beta
Add support for a single, persistent fluidsynth instance.
(Experimental, may also break the original mode...)
A little documentaion work...

2016-01-26 0.6.2 beta
Maintaince release.
Use skulpture style dials.
Use QThread::usleep() in Windows to improve sleep precision.

2016-01-16 0.6.2 beta
Stupid RC bug fixes...
Use correct home directory in Windows.

2016-01-15 0.6.2 beta
Fix compatibility with MSVC.
Support for MSVC is still experimental.
Add files for building a debian package (highly experimental).

2016-01-14 0.6.2 beta
Drag 'n' drop.
Do not quit the program when trying to load a unsupported file.

2016-01-13 0.6.2 beta
Hopefully this fixed several critical bugs...

2016-01-10 0.6.2 beta
Minor behavior changes and bug fixes.
