@@ -1,3 +1,7 @@
+2016-04-10 0.7.1 beta
+Implement output mapping related options.
+Fixed several stupid mistakes and typos.
+
 2016-04-09 0.7.1 beta
 Add the fuse mechanism to avoid black midi blocking the
 main thread.
